--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webstudio</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.com/libraries/modern-normalize"
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -69,7 +65,7 @@
             <li class="list-advent-strategy">
               <div class="icon">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg#icon-antenna"></use>
+                  <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
                 </svg>
               </div>
 
@@ -82,7 +78,7 @@
             <li class="list-advent-strategy">
               <div class="icon">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg#icon-clock"></use>
+                  <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
 
@@ -95,7 +91,7 @@
             <li class="list-advent-strategy">
               <div class="icon">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg#icon-astronaut"></use>
+                  <use href="./images/symbol-defs.svg#icon-clock-1"></use>
                 </svg>
               </div>
 
@@ -109,7 +105,7 @@
             <li class="list-advent-strategy">
               <div class="icon">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg#icon-diagram"></use>
+                  <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
                 </svg>
               </div>
 
@@ -140,28 +136,36 @@
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Ellipse1"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram-2"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Ellipse-11"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Ellipse-21"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Ellipse-31"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -182,28 +186,36 @@
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Ellipse1"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram-2"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Ellipse-11"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Ellipse-21"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Ellipse-31"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -224,28 +236,36 @@
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Ellipse1"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram-2"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Ellipse-11"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Ellipse-21"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Ellipse-31"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -266,28 +286,36 @@
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Ellipse1"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram-2"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Ellipse-11"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Ellipse-21"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Ellipse-31"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -435,32 +463,32 @@
 
         <div>
           <p class="footer-social-text">Social media</p>
-          <ul class="social-footer">
+          <ul class="social">
             <li class="icon-social">
               <a href="" class="icon-social-link">
-                <svg class="icon-social-link-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-Ellipse1"></use>
+                <svg class="icon-social-link-icon" width="16" height="16">
+                  <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-social">
               <a href="" class="icon-social-link">
-                <svg class="icon-social-link-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-Ellipse-11"></use>
+                <svg class="icon-social-link-icon" width="16" height="16">
+                  <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-social">
               <a href="" class="icon-social-link">
-                <svg class="icon-social-link-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-Ellipse-21"></use>
+                <svg class="icon-social-link-icon" width="16" height="16">
+                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-social">
               <a href="" class="icon-social-link">
-                <svg class="icon-social-link-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-Ellipse-31"></use>
+                <svg class="icon-social-link-icon" width="16" height="16">
+                  <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
             </li>
