--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <li class="list-advent-strategy">
               <div class="icon">
                 <svg width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
 
@@ -78,7 +78,7 @@
             <li class="list-advent-strategy">
               <div class="icon">
                 <svg width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
 
@@ -91,7 +91,7 @@
             <li class="list-advent-strategy">
               <div class="icon">
                 <svg width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-clock-1"></use>
+                  <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
 
@@ -105,7 +105,7 @@
             <li class="list-advent-strategy">
               <div class="icon">
                 <svg width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
 
@@ -136,36 +136,28 @@
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -186,36 +178,28 @@
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -236,36 +220,28 @@
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -286,36 +262,28 @@
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-social">
                     <a href="" class="icon-social-link">
                       <svg class="icon-social-link-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -463,32 +431,32 @@
 
         <div>
           <p class="footer-social-text">Social media</p>
-          <ul class="social">
+          <ul class="social-footer">
             <li class="icon-social">
-              <a href="" class="icon-social-link">
-                <svg class="icon-social-link-icon" width="16" height="16">
-                  <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+              <a href="" class="icon-social-link-footer">
+                <svg class="icon-social-link-icon" width=24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-social">
-              <a href="" class="icon-social-link">
-                <svg class="icon-social-link-icon" width="16" height="16">
-                  <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+              <a href="" class="icon-social-link-footer">
+                <svg class="icon-social-link-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-social">
-              <a href="" class="icon-social-link">
-                <svg class="icon-social-link-icon" width="16" height="16">
-                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+              <a href="" class="icon-social-link-footer">
+                <svg class="icon-social-link-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-social">
-              <a href="" class="icon-social-link">
-                <svg class="icon-social-link-icon" width="16" height="16">
-                  <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+              <a href="" class="icon-social-link-footer">
+                <svg class="icon-social-link-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
             </li>
