--- a/index.html
+++ b/index.html
@@ -466,19 +466,19 @@
         <div class="email-footer-div">
           <p class="footer-email-text">Subscribe</p>
           <form class="footer-form">
-            <label for="email-footer"></label>
-            <input
-              class="input-email-footer"
-              type="email"
-              name="email"
-              id="email-footer"
-              placeholder="E-mail"
-            /><button class="button-email-footer" type="button">
-              <span class="footer-button-text">Subscribe</span>
-              <svg width="24" height="20" class="button-email-footer-svg">
-                <use href="./images/icons.svg#icon-icon-send"></use>
-              </svg>
-            </button>
+            <label for="email-footer" class="footer-form-label">
+              <input
+                class="input-email-footer"
+                type="email"
+                name="email"
+                id="email-footer"
+                placeholder="E-mail" />
+              <button class="button-email-footer" type="button">
+                <span class="footer-button-text">Subscribe</span>
+                <svg width="24" height="24" class="button-email-footer-svg">
+                  <use href="./images/icons.svg#icon-icon-send"></use>
+                </svg></button
+            ></label>
           </form>
         </div>
       </div>
@@ -486,21 +486,21 @@
 
     <div class="backdrop is-open">
       <div class="modal">
-        <button type="button" class="modal-close">
-          <svg class="modal-close-svg" wight="8" height="8">
+        <button type="button" class="modal-close-button">
+          <svg class="modal-close-svg" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
         <p class="modal-text">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="modal-field">
-            <label for="modal-name" class="modal-label">Name</label>
+            <label for="user-name" class="modal-label">Name</label>
 
             <div class="icon-name-wrap">
               <input
-                id="modal-name"
+                id="user-name"
                 type="text"
-                name="name"
+                name="user-name"
                 class="modal-input"
               />
               <svg class="modal-icon-person" width="18" height="24">
@@ -538,12 +538,13 @@
               </svg>
             </div>
           </div>
-          <div class="modal-field">
-            <label for="modal-comment" class="modal-label"> Comment </label
+
+          <div class="modal-field-comment">
+            <label for="user-comment" class="modal-label"> Comment </label
             ><textarea
-              id="modal-comment"
+              id="user-comment"
               class="modal-textarea"
-              name="comment"
+              name="user-comment"
               rows="5"
               placeholder="Text input"
             ></textarea>
@@ -553,12 +554,12 @@
             <input
               class="modal-check visually-hidden"
               type="checkbox"
-              name="policy"
+              name="user-privacy"
               value="true"
-              id="policy"
+              id="user-privacy"
             />
-            <label for="policy" class="form-checkbox-text">
-              <span
+            <label for="user-privacy" class="form-checkbox-text">
+              <span class="privacy"
                 ><svg width="10" height="8" class="check-icon">
                   <use href="./images/icons.svg#icon-Vector"></use></svg
               ></span>
